# serializer version: 1
# name: test_device_tracker_setup[Mock Title-device]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'configuration_url': 'http://fake_host',
    'connections': set({
      tuple(
        'mac',
        '1c:ed:6f:12:34:11',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'fritz',
        '1CED6F123411',
      ),
    }),
    'labels': set({
    }),
    'manufacturer': 'FRITZ!',
    'model': 'FRITZ!Box 7530 AX',
    'model_id': None,
    'name': 'Mock Title',
    'name_by_user': None,
    'serial_number': None,
    'sw_version': '7.29',
    'via_device_id': None,
  })
# ---
# name: test_device_tracker_setup[device_tracker.fritz_aa_bb_cc_00_11_22_tracker-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <DeviceTrackerEntityCapabilityAttribute.TRACKING_TYPE: 'tracking_type'>: <TrackingType.CONNECTION: 'connection'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'device_tracker',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'device_tracker.fritz_aa_bb_cc_00_11_22_tracker',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'fritz',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'device_tracker',
    'unique_id': 'AA:BB:CC:00:11:22_tracker',
    'unit_of_measurement': None,
  })
# ---
# name: test_device_tracker_setup[device_tracker.fritz_aa_bb_cc_00_11_22_tracker-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'connected_to': 'fritz.box',
      'connection_type': 'LAN',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'printer',
      <ScannerEntityStateAttribute.HOST_NAME: 'host_name'>: 'printer',
      <DeviceTrackerEntityStateAttribute.IN_ZONES: 'in_zones'>: list([
        'zone.home',
      ]),
      <ScannerEntityStateAttribute.IP: 'ip'>: '192.168.178.2',
      'last_time_reachable': '2026-08-18T20:00:00+00:00',
      <ScannerEntityStateAttribute.MAC: 'mac'>: 'AA:BB:CC:00:11:22',
      <DeviceTrackerEntityStateAttribute.SOURCE_TYPE: 'source_type'>: <SourceType.ROUTER: 'router'>,
      <DeviceTrackerEntityCapabilityAttribute.TRACKING_TYPE: 'tracking_type'>: <TrackingType.CONNECTION: 'connection'>,
    }),
    'context': <ANY>,
    'entity_id': 'device_tracker.fritz_aa_bb_cc_00_11_22_tracker',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'home',
  })
# ---
# name: test_device_tracker_setup[printer-device]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'mac',
        'aa:bb:cc:00:11:22',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
    }),
    'labels': set({
    }),
    'manufacturer': 'FRITZ!',
    'model': 'FRITZ!Box Tracked device',
    'model_id': None,
    'name': 'printer',
    'name_by_user': None,
    'serial_number': None,
    'sw_version': None,
    'via_device_id': <ANY>,
  })
# ---
